--- a/android/BroadcastBestPractice/res/layout/login.xml
+++ b/android/BroadcastBestPractice/res/layout/login.xml
@@ -29,6 +29,17 @@
 
     <TableRow>
 
+        <CheckBox
+            android:id="@+id/remember_pass"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:text="@string/remember_password" />
+    </TableRow>
+
+    <TableRow>
+
         <Button
             android:id="@+id/login"
             android:layout_height="wrap_content"
