--- a/android/LocationTest/res/layout/activity_main.xml
+++ b/android/LocationTest/res/layout/activity_main.xml
@@ -6,5 +6,11 @@
         android:id="@+id/position_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    
+    <com.baidu.mapapi.map.MapView
+        android:id="@+id/map_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true" />
 
 </LinearLayout>
