--- a/android/Qingfeng/res/layout/weather_layout.xml
+++ b/android/Qingfeng/res/layout/weather_layout.xml
@@ -9,6 +9,15 @@
         android:layout_height="50dp"
         android:background="#484E61" >
 
+        <Button
+            android:id="@+id/switch_city"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:background="@drawable/home" />
+
         <TextView
             android:id="@+id/city_name"
             android:layout_width="wrap_content"
@@ -16,6 +25,17 @@
             android:layout_centerInParent="true"
             android:textColor="#fff"
             android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/refresh_weather"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/refresh" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -91,24 +111,6 @@
                     android:layout_gravity="center_vertical"
                     android:textColor="#FFF"
                     android:textSize="40sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
-
-                <Button
-                    android:id="@+id/switch_city"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/switch_city" />
-
-                <Button
-                    android:id="@+id/refresh_weather"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/refresh_weather" />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
