--- a/android/Qingfeng/res/layout/weather_layout.xml
+++ b/android/Qingfeng/res/layout/weather_layout.xml
@@ -67,6 +67,7 @@
                 android:id="@+id/current_date"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
+                android:layout_gravity="center"
                 android:gravity="center"
                 android:textColor="#FFF"
                 android:textSize="18sp" />
@@ -87,7 +88,7 @@
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:id="@+id/temp1"
+                    android:id="@+id/temp2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -105,7 +106,7 @@
                     android:textSize="40sp" />
 
                 <TextView
-                    android:id="@+id/temp2"
+                    android:id="@+id/temp1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
